// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recovery Phrase Chips Component should match snapshot 1`] = `
<div>
  <div
    class="mm-box recovery-phrase__secret mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
  >
    <div
      class="recovery-phrase__chips"
      data-testid="recovery-phrase-chips"
    >
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          1.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-0"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            debris
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          2.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-1"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            dizzy
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          3.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-2"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            just
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          4.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-3"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            program
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          5.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-4"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            just
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          6.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-5"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            float
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          7.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-6"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            decrease
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          8.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-7"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            vacant
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          9.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-8"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            alarm
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          10.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-9"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            reduce
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          11.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-10"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            speak
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          12.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-11"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            stadium
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Recovery Phrase Chips Component should match snapshot of confirm recovery phrase with inputs of indicies to check 1`] = `
<div>
  <div
    class="mm-box recovery-phrase__secret mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
  >
    <div
      class="recovery-phrase__chips"
      data-testid="recovery-phrase-chips"
    >
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          1.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-0"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            debris
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          2.
        </div>
        <div
          class="recovery-phrase__chip--with-input chip--with-input chip chip--border-color-primary-default chip--background-color-undefined chip--max-content"
        >
          <input
            class="chip__input"
            data-testid="recovery-phrase-input-1"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          3.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-2"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            just
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          4.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-3"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            program
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          5.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-4"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            just
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          6.
        </div>
        <div
          class="recovery-phrase__chip--with-input chip--with-input chip chip--border-color-primary-default chip--background-color-undefined chip--max-content"
        >
          <input
            class="chip__input"
            data-testid="recovery-phrase-input-5"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          7.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-6"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            decrease
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          8.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-7"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            vacant
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          9.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-8"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            alarm
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          10.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-9"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            reduce
          </p>
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          11.
        </div>
        <div
          class="recovery-phrase__chip--with-input chip--with-input chip chip--border-color-primary-default chip--background-color-undefined chip--max-content"
        >
          <input
            class="chip__input"
            data-testid="recovery-phrase-input-10"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="recovery-phrase__chip-item"
      >
        <div
          class="recovery-phrase__chip-item__number"
        >
          12.
        </div>
        <div
          class="mm-box mm-tag recovery-phrase__chip mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
          data-testid="recovery-phrase-chip-11"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
          >
            stadium
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
